# shotgrid-leecher

./: .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml
api/: .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  requirements-dev.txt  requirements.txt
api/shotgrid_leecher/: const.py  main.py  setup.py
app/: .env.development  .env.production  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
app/public/: index.html
app/src/: App.tsx  index.tsx
data/: volumes.py
openpype_shotgun/: const.py
shotgrid_leecher/: const.py  event_leecher.py  main.py
shotgrid_leecher/controller/: batch_controller.py  schedule_controller.py  version_controller.py
shotgrid_leecher/domain/: asset_domain.py  batch_domain.py  schedule_domain.py
shotgrid_leecher/mapper/: asset_events_mapper.py  avalon_mapper.py  entity_mapper.py  hierarchy_mapper.py  intermediate_mapper.py  query_mapper.py
shotgrid_leecher/model/: events_status_model.py
shotgrid_leecher/record/: avalon_structures.py  commands.py  enums.py  event_status.py  http_models.py  intermediate_structures.py  new_asset_event.py  new_event_commands.py  queries.py  results.py  schedule_structures.py  shotgrid_filters.py  shotgrid_project.py  shotgrid_structures.py  shotgrid_subtypes.py  shotgrid_user.py
shotgrid_leecher/repository/: asset_events.py  asset_events_repo.py  avalon_repo.py  hierarchy_repo.py  intermediate_hierarchy_repo.py  schedule_repo.py  schedule_repository.py  shotgrid_entity_repo.py  shotgrid_events_repo.py  shotgrid_hierarchy_repo.py
shotgrid_leecher/service/: asset_events_service.py
shotgrid_leecher/utils/: collections.py  connectivity.py  encoders.py  functional.py  generator.py  ids.py  logger.py  strings.py
tests/: test_it.py
(+157 files in other folders)
