[tool.poetry]
name = "openpype-shotgun"
version = "0.1.0"
description = ""
authors = ["Ellipse studio <dev@ellipse.net>"]

[tool.poetry.dependencies]
python = "^3.7"
toolz = "^0.11.1"
fastapi = "^0.66.0"
fastapi-utils = "^0.2.1"
retry = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
assertpy = "^1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
