[tool.black]
line-length = 79

[tool.poetry]
name = "shotgrid-leecher"
version = "0.1.0"
description = ""
authors = ["Ellipse studio <dev@ellipse.net>"]

[tool.poetry.dependencies]
python = "^3.7"
toolz = "^0.11.1"
fastapi = "^0.66.0"
fastapi-utils = "^0.2.1"
retry = "^0.9.2"
shotgun-api3 = {git = "https://github.com/shotgunsoftware/python-api.git", rev = "v3.2.6"}
pymongo = "^3.12.0"
dacite = "^1.6.0"
motor = "^2.5.0"
assertpy = "^1.1"
tornado = "^6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
assertpy = "^1.1"
uvicorn = "0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
