[tool.black]
line-length = 79

[tool.poetry]
name = "shotgrid-leecher"
version = "0.1.0"
description = ""
authors = ["Ellipse studio <dev@ellipse.net>"]

[tool.poetry.dependencies]
python = "^3.7"
toolz = "^0.11.1"
fastapi = "^0.66.0"
fastapi-utils = "^0.2.1"
retry = "^0.9.2"
shotgun-api3 = {git = "https://github.com/shotgunsoftware/python-api.git", rev = "v3.2.6"}
pymongo = "^3.12.0"
motor = "^2.5.0"
pydantic = "^1.8.2"
attrs = "^21.2.0"
cattrs = "^1.8.0"
asyncio-pool = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.15.1"
pytest = "^6.2"
assertpy = "^1.1"
uvicorn = "0.14.0"
types-retry = "^0.1.5"
mongomock = "3.22.0"
mypy = "^0.910"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
